Added code to read SSH config.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - "8000"
     volumes:
       - static:/usr/src/app/static
+      - $HOME/.ssh/:$HOME/.ssh/
     networks:
       - daq
     env_file:
