--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - "8000"
     volumes:
       - static:/usr/src/app/static
-      - $HOME/.ssh/:$HOME/.ssh/
+      - $HOME/.ssh/:/root/.ssh/
     networks:
       - daq
     env_file:
