--- a/nginx/django.conf
+++ b/nginx/django.conf
@@ -1,9 +1,14 @@
 server {
-    listen 80;
+    listen 8080;
     server_name nginx;
 
     location /static {
         root /www;
+    }
+
+    location /doc {
+        root /www;
+        index index.html;
     }
 
     location / {
