Started updating requirements and Dockerfile.

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,4 +4,6 @@
 # the dependencies listed in requirements.txt.
 FROM python:3.5-onbuild
 
+RUN curl -sL https://deb.nodesource.com/setup_6.x | bash - && apt-get install -y nodejs
+
 # The command to run is listed in the Docker compose file.
