--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,6 +1,7 @@
 celery==3.1.23
 Django==1.10
 django-crispy-forms==1.6.0
+djangorestframework==3.5.3
 gunicorn==19.6.0
 paramiko==2.0.2
 psycopg2==2.6.1
