--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "less": "^2.7.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.2",
     "uglify-js": "^2.7.5",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
