--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     env_file:
       - ./production.env
     volumes:
-      - daqdb:/var/lib/postgresql/data
+      - "$HOME/DAQ_Database:/var/lib/postgresql/data"
 
   # This container provides the communication service for the Celery task queue
   rabbitmq:
@@ -110,6 +110,4 @@ volumes:
   static:
     driver: local
   doc:
-    driver: local
-  daqdb:
     driver: local
